--- a/frontend/TODO.txt
+++ b/frontend/TODO.txt
@@ -1,11 +1,7 @@
 - Target release date: dec 30
 
-- Install zustand for state management
-- Check https://ui.shadcn.com/ for components
-- Install react-router-dom for routing
-- Install wagmi
-- Wallet management:
-  - Reuse wallet components from loan project, plug to wagmi/viem
+- Setup zustand for state management
+- Replace template components with https://ui.shadcn.com/
 - Setup and code subgraph
 
 - Features:
@@ -17,3 +13,15 @@
     - TBD what transactions are we talking about? 
   - Register dapp
     - TBD: what is a "dapp" in this context? register for what?
+
+
+elastos testnet contract address: {
+    "CONFIG_MANAGER": "0xB864dc2Ec7A3A72182b7F01c7bda6c1ec9336621",
+    "DAPP_REGISTRY": "0x8a32be5Af0361CBB8fD4f6502591f12E33DE9dfc",
+    "ERC721_ADDRESS": "0x6C91352F89b169843D8B50E1A34B60a46e363841",
+    "BNFT_INFO": "0x3fB20197AD095724662bF0AD499F3994bfD222D3",
+    "ZK_SERVICE": "0x462FeA614D6Af68c8B72cB677EF0b66E33a0fB8A",
+    "ARBITRATOR_MANAGER": "0x4c8623d575DbfF760Ac54DA4b8BB1148829FcaaB",
+    "TRANSACTION_MANAGER": "0x9A776ADa61772f54569d73774d836b3c2BaFD223",
+    "COMPENSATION_MANAGER": "0x82788B3CF0349dF42378ADaCfdfAdb1C316D5D29"
+}
