--- a/frontend/TODO.txt
+++ b/frontend/TODO.txt
@@ -1,19 +1,17 @@
 ===> Target release date: dec 30
 
-- register dapp:
-  - fetch registration fee (10 ELA) first
-  - dapps subgraph
-  - replace register menu with dapps menu + list + register button
-- arbitrator dashboard
-  - method to check/fetch connected wallet's arbitrator
-  - update with real arbitrator info
-  - ability to edit value + write contract
-- arbitrator list:
-  - wrong "term duration" value
-- transaction list
-  - improve with real transactions from subgraph  
-  - refresh icon next to title to get latest transactions
 - Arbitrator registration (incl staking)
+  - orange styling
+  - register with native coin stake
+  - register with NFT
+- transaction list
+  - format table values
+  - refresh icon next to title to get latest transactions
+- arbitrator list:
+  - remember previous view mode in local storage
+- arbitrator dashboard
+  - finalize arbitrator preview with well formatted data
+  - ability to edit value + write to contract
 
 P2:
 - status label component with bg color like for arbitrators, everywhere (dapps list, etc)
@@ -23,12 +21,12 @@ P2:
 - register dapp: intro about what a dapp is
 
 elastos testnet contract address: {
-    "CONFIG_MANAGER": "0xc9D4AA52c345Efe835A207aADAE8575CC086632c",
-    "DAPP_REGISTRY": "0x308c2fD094E2f1356a0843d197a29A6DaedBA023",
+    "CONFIG_MANAGER": "0x941796c51443493d2F5C03D3c40d3ff0F0B0BD30",
+    "DAPP_REGISTRY": "0xC9B498e769e1A7670f747beBB3A3b5172DD122D1",
     "ERC721_ADDRESS": "0x6C91352F89b169843D8B50E1A34B60a46e363841",
     "BNFT_INFO": "0x3fB20197AD095724662bF0AD499F3994bfD222D3",
     "ZK_SERVICE": "0x462FeA614D6Af68c8B72cB677EF0b66E33a0fB8A",
-    "ARBITRATOR_MANAGER": "0xa63339B2e236F6A1830A3DB35D73b64BE8CF2E6A",
-    "TRANSACTION_MANAGER": "0x1637106Eb7638Dd987715C8aF133F399bba862f2",
-    "COMPENSATION_MANAGER": "0xd39a816F8b6c298aF8efd14cB260F07bAB8386aF"
+    "ARBITRATOR_MANAGER": "0x42FcB0c75D3FE234EFD1d529Cd31c9A8Ab1EB4C6",
+    "TRANSACTION_MANAGER": "0xD206be45b53Fa5C2065049c7a70B1aa1755a9475",
+    "COMPENSATION_MANAGER": "0x7c31A7185660d5c40B1A02D60dbcCfd221d40787"
 }
