--- a/frontend/TODO.txt
+++ b/frontend/TODO.txt
@@ -1,17 +1,21 @@
 ===> Target release date: dec 30
 
-- Bug:
-  - stake amount with decimals crashes because of bigint (zhiming)
-  - after unstaking, status should be paused (to check)
-  - after editing fee, then edit settings again, edit form shows old data
+- Bugs:
+  - DONE P0: subgraph ERROR: invalid input arbiter status value "Unknown"
+  - DONE "Working" arbiter status should show green
+  - DONE "Arbitrated" tx status should show green
+  - P2: "Install Metamask" should look like a real button
+  - P2: Transaction list still seems to reload every time the page is entered.
 
-- Finish to replace headless UI components with https://ui.shadcn.com/
-  - Compensation details dialog
+- Ability to pause / resume an arbiter
 
 - Transaction list:
   - Submit arbitration:
     - There is a data that need to be signed, you should call the wallet to sign it
     - Pending feature completion by xiaobin
+
+- Finish to replace headless UI components with https://ui.shadcn.com/
+  - Compensation details dialog
 
 - Email service for arbiters:
   - "Arbiter can register an email for the arbitration notification, we need a background script to check the events"
