--- a/frontend/TODO.txt
+++ b/frontend/TODO.txt
@@ -12,6 +12,16 @@
 - Finish to replace headless UI components with https://ui.shadcn.com/
   - Compensation details dialog
 
+- Update loan app with recent arbitration changes:
+  - Modified Interfaces:
+    - takeOrder now includes selectedArbitrator.
+    - getArbitrationRequestCost now includes a deadline parameter.
+  - New Interfaces:
+    - registerArbitrationTransaction
+    - requestArbitration
+    - borrowerAddArbitrationSignatures
+    - getArbitrationBtcTx
+
 - Email service for arbiters:
   - "Arbiter can register an email for the arbitration notification, we need a background script to check the events"
   - "new arbitration request" event. poll subgraph (better?) or listen to evm events.
